--- a/AzureDemo_UserInfo/App.config
+++ b/AzureDemo_UserInfo/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="AzureDemo_UserInfo.Properties.Settings.db_azurepruebaConnectionString"
+            connectionString="server=midemoserver.mysql.database.azure.com;user id=myadmin@midemoserver;password=Leobbsita97;persistsecurityinfo=True;database=db_azureprueba"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
