--- a/AzureDemo_UserInfo/App.config
+++ b/AzureDemo_UserInfo/App.config
@@ -1,13 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-    </configSections>
-    <connectionStrings>
-        <add name="AzureDemo_UserInfo.Properties.Settings.db_azurepruebaConnectionString"
-            connectionString="server=midemoserver.mysql.database.azure.com;user id=myadmin@midemoserver;password=Leobbsita97;persistsecurityinfo=True;database=db_azureprueba"
-            providerName="MySql.Data.MySqlClient" />
-    </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <add name="AzureDemo_UserInfo.Properties.Settings.db_azurepruebaConnectionString" connectionString="server=midemoserver.mysql.database.azure.com;user id=myadmin@midemoserver;password=Leobbsita97;persistsecurityinfo=True;database=db_azureprueba" providerName="MySql.Data.MySqlClient" />
+    <add name="db_pruebaSQLDatabaseEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=serverpruebasqldatabase.database.windows.net,1433;initial catalog=db_pruebaSQLDatabase;persist security info=True;user id=myadmin;password=Leobbsita97;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
